# igraphicmodule

./: CMakeLists.txt
cmake/: FindIGraphic.cmake  FindIModule.cmake
includes/: IGraphicModule.hpp
